# tihos

./: Makefile.am  NEWS  README  autogen.sh  clean.sh  configure.ac
data/: 3g  Makefile.am  btnetfw  forceusbpower  gprsoff  gprson  hostmode_switch  literki_switch  manualsuspend  rotate  screenkeepon  screenonswitch  tihos.desktop.in  toggle_tray  wlan
po/: POTFILES.in  fi.po
src/: Makefile.am  tihos.c  tihos.h  util.c  util.h
